# rs-tonic

./: .gitignore  Cargo.toml  build.rs  flake.nix  shell.nix
.direnv/: flake-profile-4-link
proto/: hello.proto  hotel.proto
src/: hotel_simulator.rs  hotel_tools.rs  lib.rs  server.rs
src/hotel/: client.rs  server.rs
