[package]
name = "hello-tonic"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "hello-server"
path = "src/hello/server.rs"

[[bin]]
name = "hello-client"
path = "src/hello/client.rs"

[[bin]]
name = "hotel-server"
path = "src/hotel/server.rs"

[[bin]]
name = "hotel-client"
path = "src/hotel/client.rs"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
rand = "0.8"

[build-dependencies]
tonic-build = "0.12"
